--- a/my-slider.css
+++ b/my-slider.css
@@ -24,6 +24,22 @@
   50% { left: 120px; }
 }
 
+.video-container {
+position:relative;
+padding-button:56.25%;
+padding-top:30px;
+height:0;
+overflow:hidden;
+}
+
+.video-container iframe,.video-container object,.video-container embed{
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+}
+
 .ism-slider .ism-slides {
   list-style: none;
   position: absolute;
