--- a/my-slider.css
+++ b/my-slider.css
@@ -289,11 +289,11 @@ p.ism-badge a.ism-link:hover {
 }
 
 #my-slider-ism-badge {
-    width: 700px;
+    width: auto;
 }
 
 #my-slider:before {
-    content: ''; display: block; padding-top: 50%;
+    content: ''; display: block; padding-top: 75%;
 }
 
 #my-slider .ism-frame {
@@ -571,7 +571,7 @@ p.ism-badge a.ism-link:hover {
     font-size: 1.25em;
     font-family: sans-serif;
     position: absolute; top: 0%;
-    left: 34%;
+    left: 35%;
     border-radius: 4px;
     border: none;
     color: #fff; background-color: rgba(0, 0, 0, 0.70);
