--- a/my-slider.css
+++ b/my-slider.css
@@ -10,7 +10,7 @@
   user-select: none;
   cursor: default;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.1);a
+  background-color: rgba(0, 0, 0, 0.1);
   -webkit-animation: ism-fadein 3s;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
@@ -284,12 +284,12 @@ p.ism-badge a.ism-link:hover {
 /* SLIDER */
 
 #my-slider {
-    width: auto;
+    width: 700px;
     border-radius: 0;
 }
 
 #my-slider-ism-badge {
-    width: auto;
+    width: 700px;
 }
 
 #my-slider:before {
@@ -465,7 +465,7 @@ p.ism-badge a.ism-link:hover {
     font-size: 1.25em;
     font-family: sans-serif;
     position: absolute; top: 0%;
-    left: 34%;
+    left: 0%;
     border-radius: 4px;
     border: none;
     color: #fff; background-color: rgba(0, 0, 0, 0.40);
@@ -495,7 +495,7 @@ p.ism-badge a.ism-link:hover {
     font-size: 1.25em;
     font-family: sans-serif;
     position: absolute; top: 0%;
-    left: 34%;
+    left: 0%;
     border-radius: 4px;
     border: none;
     color: #fff; background-color: rgba(0, 0, 0, 0.40);
@@ -525,7 +525,7 @@ p.ism-badge a.ism-link:hover {
     font-size: 1.25em;
     font-family: sans-serif;
     position: absolute; top: 0%;
-    left: 34%;
+    left: 0%;
     border-radius: 4px;
     border: none;
     color: #fff; background-color: rgba(0, 0, 0, 0.40);
@@ -555,7 +555,7 @@ p.ism-badge a.ism-link:hover {
     font-size: 1.25em;
     font-family: sans-serif;
     position: absolute; top: 0%;
-    left: 34%;
+    left: 0%;
     border-radius: 4px;
     border: none;
     color: #fff; background-color: rgba(0, 0, 0, 0.40);
